@@ -1,3 +1,6 @@
+2012-06-04 Elbert Pol
+	* Add Dutch translation.
+
 2012-06-01 Isratine Citizen <genghiskhan@gmx.ca>
 	* Add Hebrew translation.
 
